--- a/mail-system/src/main/resources/application.yml
+++ b/mail-system/src/main/resources/application.yml
@@ -21,5 +21,8 @@ server:
 
 wechat:
   token: 960812ww
+  appid: wx83ca98555f482b1d
+  appsecret: 7c81dd372a5bde3f13f9cdda1b7dff35
   encodingAESKey: TDmCawn758p7Y2vo7JfbERphchNo4RCiCDUhksBL29z
-  assessTokenIp:  https://api.weixin.qq.com/cgi-bin/token
+  assessTokenIp:  https://api.weixin.qq.com/cgi-bin/token?grant_type={grant_type}&appid={appid}&secret={secret}
+  sendTemplateMsgIp: https://api.weixin.qq.com/cgi-bin/message/template/send?access_token={access_token}
